service-sample.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-backendapi
spec:
  ports:
  - port: 65001
    protocol: TCP
    targetPort: 80 
  selector:
    app: sampleapiv2
